fix footer moving and titles being too big

--- a/index.css
+++ b/index.css
@@ -221,7 +221,7 @@
     }
 
     .title-wrapper h2 {
-        font-size: clamp(1.5em, 2vw + 1em, 2.5em);
+        font-size: clamp(1em, 2vw + 1em, 2em);
         line-height: 1.2;
     }
 
